# securityengineering

./: .gitignore  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
authlab/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  prisma.config.ts  vitest.config.ts
authlab/app/: globals.css  layout.tsx  page.tsx
authlab/app/api/auth/callback/: route.ts
authlab/app/api/auth/login/: route.ts
authlab/app/api/auth/logout/: route.ts
authlab/app/api/auth/refresh/: route.ts
authlab/app/api/mock-oauth/authorize/: route.ts
authlab/app/api/mock-oauth/token/: route.ts
authlab/app/insecure/: page.tsx
authlab/app/insecure/missing-pkce/: page.tsx
authlab/app/insecure/missing-state/: page.tsx
authlab/app/insecure/token-in-localstorage/: page.tsx
authlab/app/secure/: page.tsx
authlab/lib/: authCookies.ts  crypto.ts  db.ts  oauth.ts  pkce.ts  session.ts  tokens.ts
authlab/prisma/: schema.prisma
authlab/tests/: global-setup.ts  insecure-isolation.test.ts  oauth-flow.test.ts  pkce.test.ts  session.test.ts  setup-env.ts  state.test.ts  tokens.test.ts
docs/: index.html
docs/assets/css/: fonts.css  site.css  theme.css
docs/assets/js/: console.js
secrethawk/: README.md  action.yml  pyproject.toml
secrethawk/.github/workflows/: example-usage.yml
secrethawk/src/secrethawk/: __init__.py  __main__.py  allowlist.py  cli.py  entropy.py  models.py  reporters.py  rules.py  scanner.py  walker.py
secrethawk/src/secrethawk/schemas/: sarif-2.1.0.json
secrethawk/tests/: _assembly.py  conftest.py  test_allowlist.py  test_cli.py  test_entropy.py  test_reporters.py  test_rules.py  test_scanner.py  test_walker.py
webshield/: README.md  pyproject.toml
webshield/src/webshield/: __init__.py  __main__.py  cli.py  models.py  probe.py  report.py  runner.py
webshield/src/webshield/checks/: __init__.py  cookies.py  cors.py  headers.py  reflected.py  tls.py
webshield/tests/: conftest.py  test_cli.py  test_cookies.py  test_cors.py  test_headers.py  test_reflected.py  test_report.py  test_tls.py  testapp.py
webshield/tests/fixtures/: insecure.json  secure.json
